# open3d-cmake-external-project

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
